--- a/indexhex.html
+++ b/indexhex.html
@@ -9,5 +9,10 @@
     </head>
     <body>
         <h1>HELLO HEX!</h1>
+        <h2>hi</h2>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, vel quisquam. Id tempora nihil asperiores
+            similique culpa magnam, maxime cumque?
+        </p>
     </body>
 </html>
